# imgui-refactored

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  cmake_install.cmake  compile_commands.json  imgui.ini  includes.h  main.cpp
.cache/clangd/index/: imconfig.h.2B011AFE381CF7C6.idx  imconfig.h.B3B4DC2CD9259C0B.idx  imgui.cpp.2FFA0345D8EC2200.idx  imgui.cpp.F16BB4EB1AAF88A0.idx  imgui.h.630586097F35AC2A.idx  imgui.h.AE1914D42209A5E7.idx  imgui_demo.cpp.76908ED84C4ACAFA.idx  imgui_demo.cpp.B02DA3581D4A7AFA.idx  imgui_draw.cpp.1B90746870CD273D.idx  imgui_draw.cpp.BA340B546988EDAE.idx  imgui_impl_glfw.cpp.577EDDFE149E2CE4.idx  imgui_impl_glfw.h.1E1F2D43B1C70C34.idx  imgui_impl_opengl3.cpp.2D7BFC1B9E7362DE.idx  imgui_impl_opengl3.cpp.C4AC019615B333D6.idx  imgui_impl_opengl3.h.27FE483B443DBCD1.idx  imgui_impl_opengl3.h.C194082BEBBFA090.idx  imgui_impl_opengl3_loader.h.A030A588A214534D.idx  imgui_impl_opengl3_loader.h.E3A7E63D870E599D.idx  imgui_impl_sdl2.cpp.B3FA55AAA6F35C72.idx  imgui_impl_sdl2.h.DCAD613E3911E8C0.idx  imgui_internal.h.C3AA220EDAB0C99D.idx  imgui_internal.h.DB3CF7837D89724B.idx  imgui_tables.cpp.8B905D2BD7575117.idx  imgui_tables.cpp.8F62CBD642828FA1.idx  imgui_widgets.cpp.4D774784486E6EB8.idx  imgui_widgets.cpp.A84D8B9DDA6162B9.idx  imstb_rectpack.h.26E05B27C602602F.idx  imstb_rectpack.h.DE3A059930135C34.idx  imstb_textedit.h.42ED027479F789F0.idx  imstb_textedit.h.4C11F22527CDB2B2.idx  imstb_truetype.h.A55113FDA5F187C6.idx  imstb_truetype.h.C875ECC8E854A561.idx  includes.h.2534D369D2AF2168.idx  includes.h.7702E26102CCDC86.idx  main.cpp.4537A17A8A816051.idx  main.cpp.D74BEC0C9AF6DEC3.idx
.github/workflows/: build_project.yml  cmake.yml  main.yml
